@@ -5,7 +5,7 @@
 # of which can be found in the main directory of this project.
 Gentoo Linux Installer
 
-$Id: GLIPortage.py,v 1.25 2006/01/03 01:26:10 agaffney Exp $
+$Id: GLIPortage.py,v 1.26 2006/01/03 02:02:12 agaffney Exp $
 """
 
 import re
@@ -36,7 +36,12 @@ class GLIPortage(object):
 				# The runtimedeps.py script generates a package install order that is *very* different from emerge itself
 #				tmppkglist = GLIUtility.spawn("python ../../runtimedeps.py " + self._chroot_dir + " " + pkg, return_output=True)[1].strip().split("\n")
 				tmppkglist = []
-				for tmppkg in GLIUtility.spawn("emerge -p " + pkg + r" 2>/dev/null | grep -e '^\[[a-z]' | cut -d ']' -f2 | sed -e 's:^ ::' -e 's: .\+$::'", chroot=self._chroot_dir, return_output=True)[1].strip().split("\n"):
+				tmppkglist2 = GLIUtility.spawn("emerge -p " + pkg + r" 2>/dev/null | grep -e '^\[[a-z]' | cut -d ']' -f2 | sed -e 's:^ ::' -e 's: .\+$::'", chroot=self._chroot_dir, return_output=True)[1].strip().split("\n")
+				if not tmppkglist2:
+					pkg = self.get_best_version_vdb(pkg)
+					if os.path.isdir("/var/db/pkg/" + pkg) and os.stat("/var/db/pkg/" + pkg + "/RDEPEND")[6] <= 1 and os.stat("/var/db/pkg/" + pkg + "/PDEPEND")[6] <= 1:
+						tmppkglist2 = [pkg]
+				for tmppkg in tmppkglist2:
 					if self._debug: self._logger.log("get_deps(): looking at " + tmppkg)
 					if self.get_best_version_vdb("=" + tmppkg):
 						if self._debug: self._logger.log("get_deps(): package " + tmppkg + " in host vdb...adding to tmppkglist")
