@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.560 2006/01/03 01:26:10 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.561 2006/01/03 02:02:12 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -12,6 +12,7 @@
   update sub-progress after each package is emerged
   skip tar, symlink fixup, and copy from image dir to / if no files in CONTENTS
   call get_best_version_vdb() instead of get_best_version_vdb_chroot()
+  small hack in get_deps() for packages that are in host vdb but not snapshot
   src/GLIArchitectureTemplate.py:
   install_packages() now calls emerge() in GLIPortage
   change all calls to self._emerge() to self._portage.emerge()
